GNOME Bugzilla – Bug 761910
gstharness: Fix MT issues when forwarding event/query to sink harness
Last modified: 2016-02-13 16:15:13 UTC
Created attachment 320947 [details] [review] test and fix With test that demonstrates the problem
Created attachment 320968 [details] [review] updated patch
Created attachment 320980 [details] [review] updated patch
Pushed after fixing up: gstharness.c: In function 'gst_harness_sink_event': gstharness.c:255:5: error: 'ret' undeclared (first use in this function) ret = gst_pad_push_event (fwdpad, event); commit 336c7bb69c1927ee669f4da5d3992481b598ad0e Author: Stian Selnes <stian@pexip.com> Date: Thu Jan 21 13:33:15 2016 +0100 harness: Fix MT issues when forwarding event/query to sink harness https://bugzilla.gnome.org/show_bug.cgi?id=761910
Actually I failed to git commit --amend: commit aafa79e281843800477f3dba37a98f14264910fd Author: Tim-Philipp Müller <tim@centricular.com> Date: Sat Feb 13 16:10:27 2016 +0000 harness: fix compilation Was supposed to be squashed with 336c7bb6 https://bugzilla.gnome.org/show_bug.cgi?id=761910 commit 39d3c06b18b705259c3d5a06669aa45e37dacff6 Author: Tim-Philipp Müller <tim@centricular.com> Date: Sat Feb 13 16:10:11 2016 +0000 harness: fix indentation