harness: Fix MT issues when forwarding event/query to sink harness

https://bugzilla.gnome.org/show_bug.cgi?id=761910